@@ -19,6 +19,7 @@
 |<<download-open,download-open>>|Open the last/[count]th download.
 |<<download-remove,download-remove>>|Remove the last/[count]th download from the list.
 |<<download-retry,download-retry>>|Retry the first failed/[count]th download.
+|<<fake-key,fake-key>>|Send a fake keypress or key string to the website or qutebrowser.
 |<<forward,forward>>|Go forward in the history of the current tab.
 |<<fullscreen,fullscreen>>|Toggle fullscreen mode.
 |<<help,help>>|Show help about a command or setting.
@@ -196,6 +197,20 @@ Retry the first failed/[count]th download.
 
 ==== count
 The index of the download to cancel.
+
+[[fake-key]]
+=== fake-key
+Syntax: +:fake-key [*--global*] 'keystring'+
+
+Send a fake keypress or key string to the website or qutebrowser.
+
+:fake-key xy - sends the keychain 'xy' :fake-key <Ctrl-x> - sends Ctrl-x :fake-key <Escape> - sends the escape key
+
+==== positional arguments
+* +'keystring'+: The keystring to send.
+
+==== optional arguments
+* +*-g*+, +*--global*+: If given, the keys are sent to the qutebrowser UI.
 
 [[forward]]
 === forward
